Crear imagen a partir de html
Crear imagen para luego utilizarla en intregracion a discord

--- a/Hack.ipynb
+++ b/Hack.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "id": "aa113866",
    "metadata": {},
    "outputs": [
@@ -77,8 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "a219e98f",
+   "execution_count": 35,
+   "id": "a8d11384",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "id": "de62f8e1",
    "metadata": {
     "scrolled": false
@@ -317,14 +317,67 @@
     "    for i in range(0,5):\n",
     "        html = re.sub(f'%ciudad{i+16}%',f'{pandatemp.index[i]}',html)\n",
     "        html = re.sub(f'%ciudad{i+16}cant%',f'{pandatemp[i]}',html)\n",
-    "    \n",
+    "    #Se añade todo al reporte\n",
     "    temp = open('temp.html', 'w')\n",
     "    temp.write(html)\n",
     "    temp.close()\n",
+    "    #Se abre el reporte\n",
     "    archivo = 'file:///'+os.path.realpath('temp.html')\n",
     "    webbrowser.open_new_tab(archivo)\n",
     "    print('Si')\n",
     "crear_reporte(2020,1,datos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "901a9a38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading page (1/2)\r\n",
+      "[>                                                           ] 0%\r",
+      "[======>                                                     ] 10%\r",
+      "QNetworkAccessFileBackendFactory: URL has no schema set, use file:// for files\r\n",
+      "QNetworkAccessFileBackendFactory: URL has no schema set, use file:// for files\r\n",
+      "QNetworkAccessFileBackendFactory: URL has no schema set, use file:// for files\r\n",
+      "[=======>                                                    ] 12%\r",
+      "[===========>                                                ] 19%\r",
+      "[===============>                                            ] 25%\r",
+      "[===================>                                        ] 33%\r",
+      "[============================================================] 100%\r",
+      "Rendering (2/2)                                                    \r\n",
+      "[>                                                           ] 0%\r",
+      "[===============>                                            ] 25%\r",
+      "[============================================================] 100%\r",
+      "Done                                                               \r\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import imgkit\n",
+    "\n",
+    "path_wkthmltoimage = r'C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltoimage.exe'\n",
+    "config = imgkit.config(wkhtmltoimage=path_wkthmltoimage)\n",
+    "\n",
+    "kitoptions = {\n",
+    "  \"enable-local-file-access\": None\n",
+    "}\n",
+    "\n",
+    "imgkit.from_file('temp.html', 'out.jpg',config=config,options=kitoptions)"
    ]
   }
  ],
