Actualizar discord token

--- a/Hack.ipynb
+++ b/Hack.ipynb
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "8fae7200",
+   "id": "75b898e9",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "41b40dd1",
+   "id": "fa8dec6d",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7ac19382",
+   "id": "ea9ca686",
    "metadata": {},
    "outputs": [
     {
@@ -778,17 +778,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "469f12ab",
+   "id": "d313d5f1",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2023-01-24 17:29:50] [INFO    ] discord.client: logging in using static token\n",
-      "[2023-01-24 17:29:50] [INFO    ] discord.client: logging in using static token\n",
-      "[2023-01-24 17:29:54] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: 3849269810f2bc6d7ef6fdbfc8399bfe).\n",
-      "[2023-01-24 17:29:54] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: 3849269810f2bc6d7ef6fdbfc8399bfe).\n"
+      "[2023-01-24 18:00:49] [INFO    ] discord.client: logging in using static token\n",
+      "[2023-01-24 18:00:49] [INFO    ] discord.client: logging in using static token\n",
+      "[2023-01-24 18:00:49] [INFO    ] discord.client: logging in using static token\n",
+      "[2023-01-24 18:00:49] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: 00e0793ceebabda0ec5bad0ce9b0895e).\n",
+      "[2023-01-24 18:00:49] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: 00e0793ceebabda0ec5bad0ce9b0895e).\n",
+      "[2023-01-24 18:00:49] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: 00e0793ceebabda0ec5bad0ce9b0895e).\n"
      ]
     },
     {
@@ -819,6 +821,8 @@
     "import re\n",
     "nest_asyncio.apply()\n",
     "\n",
+    "token = 'UPicmiKg3LNuBzKQ474aCTDPLUXdb1U3fLGlch.3lYHyG.AO2ETN5MDN0YDMycDOwYzM2ATM'\n",
+    "\n",
     "intents = discord.Intents.all()\n",
     "client = discord.Client(command_prefix='!', intents=intents)\n",
     "\n",
@@ -836,13 +840,13 @@
     "        crear_reporte_imagen(2020,1,datos)\n",
     "        await message.channel.send(file=discord.File('out.jpg'))\n",
     " \n",
-    "client.run(\"MTA2MzYwODcyMDY0NDM5NTE2OA.GMC2Zq.M5EjeYf7VRdRLK39M2erV3LjVfRHyaZTgsZ71E\")"
+    "client.run(token[::-1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4c5034a",
+   "id": "a339b5d5",
    "metadata": {},
    "outputs": [],
    "source": []
